[tool.poetry]
name = "myzml"
version = "0.1.0"
description = ""
authors = ["Frollo"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastkml = {extras = ["lxml"], version = "^1.1.0"}
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
